updated demontration ipynb

--- a/Instructions and demonstration of calculator.ipynb
+++ b/Instructions and demonstration of calculator.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled3.ipynb",
+      "name": "calculator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "authorship_tag": "ABX9TyPkgr1JFkK4jV7gXuQU+U9K",
@@ -38,7 +38,7 @@
         "\n",
         "## Installation\n",
         "\n",
-        "To install the calculator package use command !pip command as illustrated below."
+        "To install the calculator package use !pip command as illustrated below."
       ]
     },
     {
@@ -135,7 +135,7 @@
         "id": "eT_iP6rEqlwU"
       },
       "source": [
-        "The default value of the calculator initialized will be 0. You can also specify a number in the parentheses when starting calculator. It will be taken as a first number to perform subsequent operations on. "
+        "The default value of the calculator will be 0. You can also specify a number in the parentheses when starting calculator. It will be taken as a first number to perform subsequent operations on. "
       ]
     },
     {
