--- a/Instructions and demonstration of calculator.ipynb
+++ b/Instructions and demonstration of calculator.ipynb
@@ -6,7 +6,6 @@
       "name": "calculator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPkgr1JFkK4jV7gXuQU+U9K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,33 +44,59 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 511
         },
         "id": "OfDg5Y_cjMyj",
-        "outputId": "c47cb266-8424-4fbd-ba9f-9c5d6c537289"
+        "outputId": "d91b39e7-caa0-4d85-fa90-ca3f8754c7ab"
       },
       "source": [
         "!pip install git+https://github.com/LiucijaSvink/calculator.git"
       ],
-      "execution_count": 28,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Collecting git+https://github.com/LiucijaSvink/calculator.git\n",
-            "  Cloning https://github.com/LiucijaSvink/calculator.git to /tmp/pip-req-build-vjf42p_k\n",
-            "  Running command git clone -q https://github.com/LiucijaSvink/calculator.git /tmp/pip-req-build-vjf42p_k\n",
-            "Requirement already satisfied: typing in /usr/local/lib/python3.7/dist-packages (from calculator==0.0.1) (3.7.4.3)\n",
-            "Requirement already satisfied: pytest in /usr/local/lib/python3.7/dist-packages (from calculator==0.0.1) (3.6.4)\n",
+            "  Cloning https://github.com/LiucijaSvink/calculator.git to /tmp/pip-req-build-1glpj14z\n",
+            "  Running command git clone -q https://github.com/LiucijaSvink/calculator.git /tmp/pip-req-build-1glpj14z\n",
+            "Collecting typing\n",
+            "  Downloading typing-3.7.4.3.tar.gz (78 kB)\n",
+            "\u001b[K     |████████████████████████████████| 78 kB 6.4 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: pytest in /usr/local/lib/python3.7/dist-packages (from calculator==0.0.1) (3.6.4)\n",
+            "Requirement already satisfied: atomicwrites>=1.0 in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (1.4.0)\n",
+            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (1.15.0)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (57.4.0)\n",
             "Requirement already satisfied: py>=1.5.0 in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (1.10.0)\n",
             "Requirement already satisfied: pluggy<0.8,>=0.5 in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (0.7.1)\n",
             "Requirement already satisfied: attrs>=17.4.0 in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (21.2.0)\n",
-            "Requirement already satisfied: atomicwrites>=1.0 in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (1.4.0)\n",
             "Requirement already satisfied: more-itertools>=4.0.0 in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (8.10.0)\n",
-            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (1.15.0)\n"
+            "Building wheels for collected packages: calculator, typing\n",
+            "  Building wheel for calculator (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for calculator: filename=calculator-0.0.1-py3-none-any.whl size=4474 sha256=1726c18052fcf9f91087f0ce6e44104880d3d10002a10a5f1cb23ea3f758f004\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-f_kbd9g6/wheels/d1/ed/83/bf40284bbcfb5eb972cd853db95fe190ca63ac2d6ed5d2562a\n",
+            "  Building wheel for typing (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for typing: filename=typing-3.7.4.3-py3-none-any.whl size=26324 sha256=4d7638b2d5ab1e55378bcb94e4351635a290a8795de68f8c94448dee236aef51\n",
+            "  Stored in directory: /root/.cache/pip/wheels/35/f3/15/01aa6571f0a72ee6ae7b827c1491c37a1f72d686fd22b43b0e\n",
+            "Successfully built calculator typing\n",
+            "Installing collected packages: typing, calculator\n",
+            "Successfully installed calculator-0.0.1 typing-3.7.4.3\n"
           ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "typing"
+                ]
+              }
+            }
+          },
+          "metadata": {}
         }
       ]
     },
@@ -92,7 +117,7 @@
       "source": [
         "from calculator import Calculator"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +143,7 @@
       "source": [
         "calculator = Calculator()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +175,7 @@
       "source": [
         "second_calculator = Calculator(6)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +214,7 @@
       "source": [
         "calculator.subtract(3)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,7 +246,7 @@
       "source": [
         "calculator.multiply(4)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,9 +276,9 @@
         "outputId": "d8c9198b-d819-4702-ec43-7761286be127"
       },
       "source": [
-        "calculator.memory"
+        "calculator.display"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,7 +313,7 @@
       "source": [
         "calculator.reset(98)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,7 +336,7 @@
       "source": [
         "calculator.reset()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +370,7 @@
         "calculator.divide(2)\n",
         "calculator.root(3)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
