--- a/Instructions and demonstration.ipynb
+++ b/Instructions and demonstration.ipynb
@@ -43,13 +43,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OfDg5Y_cjMyj"
+        "id": "OfDg5Y_cjMyj",
+        "outputId": "952efc2d-8eb8-4223-a6a9-2ab55c9b750e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!pip install git+https://github.com/LiucijaSvink/calculator.git"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting git+https://github.com/LiucijaSvink/calculator.git\n",
+            "  Cloning https://github.com/LiucijaSvink/calculator.git to /tmp/pip-req-build-783duuxr\n",
+            "  Running command git clone -q https://github.com/LiucijaSvink/calculator.git /tmp/pip-req-build-783duuxr\n",
+            "Requirement already satisfied: typing in /usr/local/lib/python3.7/dist-packages (from calculator==0.0.1) (3.7.4.3)\n",
+            "Requirement already satisfied: pytest in /usr/local/lib/python3.7/dist-packages (from calculator==0.0.1) (3.6.4)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (57.4.0)\n",
+            "Requirement already satisfied: py>=1.5.0 in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (1.10.0)\n",
+            "Requirement already satisfied: attrs>=17.4.0 in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (21.2.0)\n",
+            "Requirement already satisfied: pluggy<0.8,>=0.5 in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (0.7.1)\n",
+            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (1.15.0)\n",
+            "Requirement already satisfied: more-itertools>=4.0.0 in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (8.10.0)\n",
+            "Requirement already satisfied: atomicwrites>=1.0 in /usr/local/lib/python3.7/dist-packages (from pytest->calculator==0.0.1) (1.4.0)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -68,7 +91,7 @@
       "source": [
         "from calculator import Calculator"
       ],
-      "execution_count": 1,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -85,25 +108,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "D_zAMaWuogHo",
-        "outputId": "647ae9cb-e005-446e-bc95-794000f54576"
+        "id": "D_zAMaWuogHo"
       },
       "source": [
         "calculator = Calculator()"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n"
-          ]
-        }
-      ]
+      "execution_count": 22,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -117,25 +128,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cd6OPQGSqrZO",
-        "outputId": "ba2cb311-8e0c-4070-bb21-9b97d9549a7e"
+        "id": "cd6OPQGSqrZO"
       },
       "source": [
         "second_calculator = Calculator(6)"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "6\n"
-          ]
-        }
-      ]
+      "execution_count": 23,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -160,19 +159,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NkfK1cGrrNdB",
-        "outputId": "2521c5f7-9917-41f0-abaa-87ef2a39540d"
+        "outputId": "8b5a80b0-9699-4790-c4a9-8aeeb7f640a1"
       },
       "source": [
-        "calculator.subtract(3)"
+        "calculator.add(3)"
       ],
-      "execution_count": 4,
+      "execution_count": 24,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
         }
       ]
     },
@@ -192,19 +194,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kfl-Woj3rcgz",
-        "outputId": "d84699a0-c993-4541-ef4c-3b038d3ac0ca"
+        "outputId": "ba50d6f2-5a13-435b-d6f7-8e5233215c28"
       },
       "source": [
         "calculator.multiply(4)"
       ],
-      "execution_count": 5,
+      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "12\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
         }
       ]
     },
@@ -221,26 +226,21 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 164
+          "base_uri": "https://localhost:8080/"
         },
         "id": "bGxu07NirrjV",
-        "outputId": "67e210cc-8ff0-4b4f-acff-e0bb67b2df7f"
+        "outputId": "1b035b0b-a73b-4a10-e0b7-f86e28b7a47e"
       },
       "source": [
         "calculator.display"
       ],
-      "execution_count": 6,
+      "execution_count": 26,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-6e6ed1d4a611>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcalculator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'Calculator' object has no attribute 'display'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\n"
           ]
         }
       ]
@@ -261,19 +261,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UgVkXDdhr54n",
-        "outputId": "b555b024-9165-4cfd-e2ef-4e0fa255e73d"
+        "outputId": "67719aa2-a8d1-4d5d-95df-c65c9aca5bca"
       },
       "source": [
         "calculator.reset(98)"
       ],
-      "execution_count": 7,
+      "execution_count": 27,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "98\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "98"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
         }
       ]
     },
@@ -284,19 +287,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eLGPVpa-smqR",
-        "outputId": "1a7b18d7-8e52-47ad-ea19-7e5831053ae8"
+        "outputId": "04b7483e-e75d-4fcb-bebe-1b27b375439c"
       },
       "source": [
         "calculator.reset()"
       ],
-      "execution_count": 15,
+      "execution_count": 28,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
         }
       ]
     },
@@ -316,23 +322,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VcgzjDp1sIXx",
-        "outputId": "3d9af25b-77bf-4a0f-8dac-add51c930c17"
+        "outputId": "4edf0a8f-4c81-4d84-e138-2a299b52e495"
       },
       "source": [
         "calculator.add(8192)\n",
         "calculator.divide(2.0)\n",
         "calculator.root(-3)"
       ],
-      "execution_count": 16,
+      "execution_count": 29,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "8192\n",
-            "4096.0\n",
-            "0.06250000000000001\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.06250000000000001"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
         }
       ]
     },
@@ -353,7 +360,7 @@
       "source": [
         "result = calculator.get_memory"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
